# flutter_zxing

./: .gitignore  .gitmodules  .pubignore  CHANGELOG.md  LICENSE  PRIVACY_POLICY.md  README.md  analysis_options.yaml  ffigen.yaml  init.sh  init_win.ps1  melos.yaml  pubspec.yaml
.github/: dependabot.yml
.github/workflows/: main.yml
android/: .gitignore  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/markosyan/flutter_zxing/: FlutterZxingPlugin.kt
example/: README.md  pubspec.yaml
example/android/: .gitignore
example/android/app/: build.gradle  build.gradle.kts
example/android/app/src/debug/: AndroidManifest.xml
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/markosyan/example/: MainActivity.kt
example/android/app/src/main/kotlin/com/markosyan/flutter_zxing_example/: MainActivity.kt
example/android/gradle/wrapper/: gradle-wrapper.properties
example/integration_test/: ffi_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart  zxing_page.dart
example/lib/configs/: app_store.dart  constants.dart
example/lib/l10n/: intl_en_US.arb
example/lib/models/: code.dart  encode.dart
example/lib/pages/: barcodes_page.dart  creator_page.dart  help_page.dart  history_page.dart  home_page.dart  scanner_page.dart  settings_page.dart
example/lib/utils/: db_service.dart  extensions.dart  router.dart
example/lib/widgets/: common_widgets.dart  debug_info_widget.dart  language_widget.dart  scan_from_gallery_widget.dart  scan_mode_dropdown.dart  scan_result_widget.dart  theme_selector.dart  unsupported_platform_widget.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/test/: widget_test.dart
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: flutter_zxing.modulemap  flutter_zxing.podspec
ios/Classes/: FlutterZxingPlugin.h  FlutterZxingPlugin.m  SwiftFlutterZxingPlugin.swift
ios/Classes/src/: CMakeLists.txt  common.cpp  common.h  native_zxing.cpp  native_zxing.h
ios/Classes/src/zxing/src/: CharacterSetECI.cpp
ios/flutter_zxing/: Package.swift
ios/flutter_zxing/.swiftpm/xcode/xcuserdata/khorenmarkosyan.xcuserdatad/xcschemes/: xcschememanagement.plist
lib/: flutter_zxing.dart  generated_bindings.dart  image_converter.dart  isolate_utils.dart  reader_widget.dart  scanner_overlay.dart  writer_widget.dart  zxing_cross.dart  zxing_mobile.dart  zxing_reader_widget.dart  zxing_web.dart  zxing_writer_widget.dart
lib/src/logic/: barcode_encoder.dart  barcode_reader.dart  barcodes_reader.dart  bindings.dart  camera_image.dart  camera_stream.dart  zxing.dart
lib/src/models/: code.dart  encode.dart  format.dart  image_format.dart  messages.dart  models.dart  params.dart  position.dart
lib/src/ui/: dynamic_scanner_overlay.dart  fixed_scanner_overlay.dart  multi_result_overlay.dart  reader_widget.dart  scan_mode_dropdown.dart  scanner_overlay.dart  scanner_overlay_border.dart  ui.dart  writer_widget.dart
lib/src/utils/: extentions.dart  image_converter.dart  isolate_utils.dart  messages.dart
linux/: CMakeLists.txt
macos/: flutter_zxing.podspec
macos/flutter_zxing/: Package.swift
scripts/: update_ios_macos_src.sh
src/: CMakeLists.txt  common.cpp  common.h  dart_alloc.h  native_zxing.cpp  native_zxing.h  zxcommon.cpp
test/: flutter_zxing_test.dart
windows/: CMakeLists.txt
zxscanner/: PRIVACY_POLICY.md  README.md  analysis_options.yaml  pubspec.yaml
zxscanner/android/: .gitignore  settings.gradle
zxscanner/android/app/: build.gradle  build.gradle.kts
zxscanner/android/app/src/androidTest/java/com/markosyan/zxscanner/: JUnit4StyleTests.kt
zxscanner/android/app/src/debug/: AndroidManifest.xml
zxscanner/android/app/src/main/: AndroidManifest.xml
zxscanner/android/app/src/main/kotlin/com/markosyan/zxscanner/: MainActivity.kt
zxscanner/android/app/src/main/res/values/: colors.xml
zxscanner/android/app/src/profile/: AndroidManifest.xml
zxscanner/android/app/src/test/java/com/markosyan/zxscanner/: ExampleTest.kt
zxscanner/android/fastlane/: Appfile  Fastfile  README.md  Screengrabfile
zxscanner/android/fastlane/metadata/android/: framefile.json
zxscanner/android/fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  title.strings  title.txt
zxscanner/android/gradle/wrapper/: gradle-wrapper.properties
zxscanner/ios/: .gitignore
zxscanner/ios/Runner/: Info-Debug.plist  Info-Release.plist  Info.plist
zxscanner/ios/Runner.xcodeproj/: project.pbxproj
zxscanner/ios/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme  zxscannerUITests.xcscheme
zxscanner/ios/Runner/Base.lproj/: LaunchScreen.storyboard
zxscanner/ios/fastlane/: Appfile  Fastfile  README.md  Snapfile
zxscanner/ios/fastlane/screenshots/: framefile.json
zxscanner/ios/fastlane/screenshots/en-US/: keyword.strings  title.strings
zxscanner/ios/zxscannerUITests/: zxscannerUITests.swift  zxscannerUITestsLaunchTests.swift
zxscanner/lib/: main.dart
zxscanner/lib/configs/: app_store.dart  app_store.g.dart  app_theme.dart  constants.dart
zxscanner/lib/models/: code.dart  code.g.dart  encode.dart  encode.g.dart  models.dart
zxscanner/lib/pages/: barcodes_page.dart  creator_page.dart  help_page.dart  history_page.dart  home_page.dart  scanner_page.dart  settings_page.dart
zxscanner/lib/utils/: db_service.dart  extensions.dart  router.dart  scroll_behavior.dart  shared_pref.dart
zxscanner/lib/widgets/: common_widgets.dart  language_widget.dart  setting_tile.dart  theme_selector.dart
zxscanner/test/: widget_test.dart
